--- a/Labs.html
+++ b/Labs.html
@@ -20,9 +20,8 @@
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
       <li><a href="index.html">Home</a></li>
-      <li><a href="#work">About</a></li>
-      <li><a href="projects.html">Projects</a></li>
-      <li><a href="#careers">Contact</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Labs</a></li>
     </ul>
 
   </nav>
