--- a/Lab3.html
+++ b/Lab3.html
@@ -15,7 +15,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Lab 4</a>
@@ -34,7 +34,7 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">This is My Lab 3</h1>
-          <p class="lead">This library kills the fun of design haha...</p>
+          <p class="lead">Made in bootstrap</p>
         </div>
       </div>
 
@@ -44,6 +44,7 @@
         <li class="list-group-item">Item 2</li>
         <li class="list-group-item">Item 3</li>
         <li class="list-group-item">Item 4</li>
+        <img src="imgs/giz.jpg" class="rounded mx-auto d-block img-fluid w-25" alt="...">
       </ul>
 
 
