--- a/Labs.html
+++ b/Labs.html
@@ -33,7 +33,8 @@
 
 <div class="project-container">
 
- 
+ <h2>Lab 3</h2>
+ <button class="project-btn" onclick="window.location.href='Lab3.html'">Go</button>
 
 </div>
 
