added link to hw 4

--- a/Labs.html
+++ b/Labs.html
@@ -38,6 +38,13 @@
 
 </div>
 
+<div class="project-container">
+
+  <h2>Lab 4</h2>
+  <button class="project-btn" onclick="window.location.href='Lab4.html'">Go</button>
+ 
+ </div>
+
 
 
 </section>
