--- a/Lab5.html
+++ b/Lab5.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
+    <script src="Lab5.js" defer></script>
 </head>
 <body>
   <style>
     body {
-        background-color: hsl(0, 0%, 96%);
+      background-image: linear-gradient(to right, Dodgerblue , Aqua);
     }
   </style>
     <!-- Section: Design Block -->
@@ -33,34 +34,34 @@
   
           <div class="col-lg-6 mb-5 mb-lg-0">
             <div class="card">
-              <div class="card-body py-5 px-md-5">
+              <div id="loginContainer" class="card-body py-5 px-md-5">
                 <form>
                   <!-- 2 column grid layout with text inputs for the first and last names -->
                   <div class="row">
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <input type="text" id="form3Example1" class="form-control" />
-                        <label class="form-label" for="form3Example1">First name</label>
+                        <input type="text" id="firstName" class="form-control" />
+                        <label class="form-label" for="firstName">First name</label>
                       </div>
                     </div>
                     <div class="col-md-6 mb-4">
                       <div class="form-outline">
-                        <input type="text" id="form3Example2" class="form-control" />
-                        <label class="form-label" for="form3Example2">Last name</label>
+                        <input type="text" id="lastName" class="form-control" />
+                        <label class="form-label" for="lastName">Last name</label>
                       </div>
                     </div>
                   </div>
   
                   <!-- Email input -->
                   <div class="form-outline mb-4">
-                    <input type="email" id="form3Example3" class="form-control" />
-                    <label class="form-label" for="form3Example3">Email address</label>
+                    <input type="email" id="email" class="form-control" />
+                    <label class="form-label" for="email">Email address</label>
                   </div>
   
                   <!-- Password input -->
                   <div class="form-outline mb-4">
-                    <input type="password" id="form3Example4" class="form-control" />
-                    <label class="form-label" for="form3Example4">Password</label>
+                    <input type="password" id="password" class="form-control" required minlength="8" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*?[0-9])(?=.*?[!@#$%^&*+`~'=?\|\]\[\(\)\->/]).{8,}" />
+                    <label class="form-label" for="password">Password</label>
                   </div>
   
                 
