added lab 5 link

--- a/Labs.html
+++ b/Labs.html
@@ -45,6 +45,13 @@
  
  </div>
 
+ div class="project-container">
+
+  <h2>Lab 5</h2>
+  <button class="project-btn" onclick="window.location.href='Lab5.html'">Go</button>
+ 
+ </div>
+
 
 
 </section>
